# tauri-plugin-dragout

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: native_drag_out.toml
permissions/schemas/: schema.json
src/: lib.rs  macos.rs  macos_objc2.rs
