[package]
name = "tauri-plugin-dragout"
version = "0.1.1"
edition = "2021"
links = "tauri-plugin-dragout"
description = "Tauri plugin providing native macOS drag-out (file promise) support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexqqqqqq777/tauri-plugin-dragout"
readme = "README.md"
keywords = ["tauri", "plugin", "drag-and-drop", "macos"]
categories = ["gui", "os::macos-apis", "development-tools::ffi"]

[dependencies]
tauri = "2"



# macOS-specific dependencies (Core Foundation, Cocoa framework)
# These should NOT compile on Windows/Linux to avoid unix::io errors
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_exception = "0.1"
block2 = "0.5"

# Cocoa stack
cocoa = "0.26.1"
once_cell = "1.19"
dispatch = "0.2"

# Optional modern Objective-C bindings (enable with `objc2_backend`)
objc2 = { version = "0.5", optional = true }
objc2-app-kit = { version = "0.5", optional = true }

# Optional BlitzArch archive extractor backend
blitzarch = { version = "0.2", optional = true }








[features]
default = []

objc2_backend = ["objc2", "objc2-app-kit"]
blitzarch_backend = ["blitzarch"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-plugin = "2"
